src/test/ui/exclusive-drop-and-copy.stderr
error[E0184]: the trait `Copy` may not be implemented for this type; the type has a destructor
  --> $DIR/exclusive-drop-and-copy.rs:3:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ Copy not allowed on types with destructors

error[E0184]: the trait `Copy` may not be implemented for this type; the type has a destructor
  --> $DIR/exclusive-drop-and-copy.rs:10:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ Copy not allowed on types with destructors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0184`.
